--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ROf-mP-6yK">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -11,19 +11,35 @@
         <!--Users-->
         <scene sceneID="Pne-uJ-Oo8">
             <objects>
-                <tableViewController id="oWQ-U1-qEG" sceneMemberID="viewController">
+                <tableViewController id="oWQ-U1-qEG" customClass="UserTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="RzD-IX-pAs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="CYl-c5-X7D">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" textLabel="EPy-hy-AOr" imageView="Ocv-8f-UtQ" style="IBUITableViewCellStyleDefault" id="CYl-c5-X7D">
                                 <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CYl-c5-X7D" id="fl8-Gh-31M">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EPy-hy-AOr">
+                                            <rect key="frame" x="132" y="0.0" width="227" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="Lambda_Logo_Full" id="Ocv-8f-UtQ">
+                                            <rect key="frame" x="16" y="0.0" width="101" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Hvs-Jf-Of7" kind="show" identifier="UserDetailSegue" id="pRX-hs-sNU"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -39,34 +55,34 @@
             </objects>
             <point key="canvasLocation" x="-1732" y="-5.8470764617691158"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="jzg-Eo-tci">
             <objects>
-                <viewController id="Hvs-Jf-Of7" sceneMemberID="viewController">
+                <viewController id="Hvs-Jf-Of7" customClass="DetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="daD-mb-PIu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S1K-Sa-66N">
-                                <rect key="frame" x="20" y="75" width="335" height="300"/>
+                                <rect key="frame" x="20" y="146" width="335" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="wES-sb-SCT"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H7U-tK-dda">
-                                <rect key="frame" x="20" y="425" width="335" height="41"/>
+                                <rect key="frame" x="20" y="496" width="335" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email@email.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ls4-l6-yz6">
-                                <rect key="frame" x="20" y="507" width="335" height="21"/>
+                                <rect key="frame" x="20" y="578" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(123)456-7890" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xZ-bv-BrB">
-                                <rect key="frame" x="20" y="476" width="335" height="21"/>
+                                <rect key="frame" x="20" y="547" width="335" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -85,10 +101,17 @@
                             <constraint firstItem="S1K-Sa-66N" firstAttribute="leading" secondItem="F3r-0b-Ad9" secondAttribute="leading" constant="20" id="mKm-4U-3MG"/>
                             <constraint firstItem="F3r-0b-Ad9" firstAttribute="trailing" secondItem="S1K-Sa-66N" secondAttribute="trailing" constant="20" id="upw-qQ-k4W"/>
                             <constraint firstItem="ls4-l6-yz6" firstAttribute="top" secondItem="1xZ-bv-BrB" secondAttribute="bottom" constant="10" id="yNa-3h-CLz"/>
-                            <constraint firstItem="S1K-Sa-66N" firstAttribute="top" secondItem="F3r-0b-Ad9" secondAttribute="top" constant="75" id="yyE-Fh-paN"/>
+                            <constraint firstItem="S1K-Sa-66N" firstAttribute="top" secondItem="F3r-0b-Ad9" secondAttribute="top" constant="50" id="yyE-Fh-paN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="F3r-0b-Ad9"/>
                     </view>
+                    <navigationItem key="navigationItem" id="BrV-Cf-xEl"/>
+                    <connections>
+                        <outlet property="userEmail" destination="ls4-l6-yz6" id="DUR-Ic-SRk"/>
+                        <outlet property="userImage" destination="S1K-Sa-66N" id="xJi-aK-nT9"/>
+                        <outlet property="userName" destination="H7U-tK-dda" id="6bg-oi-evZ"/>
+                        <outlet property="userPhoneNumber" destination="1xZ-bv-BrB" id="aeB-5v-KKG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m9T-EU-lPS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -113,4 +136,7 @@
             <point key="canvasLocation" x="-2671.1999999999998" y="-5.8470764617691158"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Lambda_Logo_Full" width="574" height="249"/>
+    </resources>
 </document>
